--- a/app/src/main/res/layout/fragment_details_chat.xml
+++ b/app/src/main/res/layout/fragment_details_chat.xml
@@ -14,38 +14,46 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="9"
+            android:layout_weight="1"
             android:background="@color/gray"
             android:orientation="vertical">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/records_recycler_view"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:padding="1dp"
                 android:scrollbars="vertical"
-                tools:listitem="@layout/item_record_messages" />
+                tools:listitem="@layout/item_messages_not_my" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.7"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/description_edit_text"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
                 android:gravity="start"
                 android:hint="Сообщение"
-                android:inputType="textLongMessage"
+                android:inputType="textMultiLine"
+                android:maxLines="6"
                 android:textColor="@color/black"
+                android:textSize="16dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/send_message_button"
+                style="@style/Widget.Material3.Button.TextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Отправить"
                 android:textSize="16dp" />
 
         </LinearLayout>
