Два типа разных view (используем разные item)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#EAE6E6</color>
+    <color name="cyan">#A6EAFB</color>
 </resources>
