--- a/app/src/main/res/drawable/bg_chat_border_not_my.xml
+++ b/app/src/main/res/drawable/bg_chat_border_not_my.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     android:tint="@color/white">
     <stroke
-        android:width="1dip"
+        android:width="1dp"
         android:color="@color/black" />
     <corners
         android:bottomLeftRadius="10dp"
