--- a/app/src/main/res/layout/item_messages_my.xml
+++ b/app/src/main/res/layout/item_messages_my.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/gray">
 
     <TextView
@@ -10,10 +11,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="14dp"
-        android:background="@drawable/border"
+        android:background="@drawable/bg_chat_border_my"
         android:gravity="end"
-        android:hint="Текст мой"
-        android:padding="4dp"
+        android:padding="8dp"
+        tools:text="Текст мой"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
