--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:orientation="vertical"
-    tools:context=".ui.RootActivity">
+    tools:context=".ui.root.RootActivity">
 
     <FrameLayout
         android:id="@+id/fragment_container_frame_layout"
